[Simple line layout] Text with letter spacing is not positioned properly. https://bugs.webkit.org/show_bug.cgi?id=183079 <rdar://problem/38762569>

Reviewed by Antti Koivisto.

Source/WebCore:

We need to recompute RenderText::m_canUseSimplifiedTextMeasuring when the font cascade changes
since we might not be able to use the fast path anymore.

Test: fast/text/simple-line-layout-dynamic-letter-word-spacing.html

* rendering/RenderText.cpp:
(WebCore::RenderText::styleDidChange):

LayoutTests:

* fast/text/simple-line-layout-dynamic-letter-word-spacing-expected.html: Added.
* fast/text/simple-line-layout-dynamic-letter-word-spacing.html: Added.


Canonical link: https://commits.webkit.org/199504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229867 268f45cc-cd09-0410-ab3c-d52691b4dbfc